--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             <a href="#about">
                 <h5>About</h5>
             </a>
-            <a href="#contact">Contact</a>
+            <a href="#contact">
+                <h5>Contact</h5>
+            </a>
 
         </div>
 
@@ -64,13 +66,13 @@
             <i class="ti-layout-line-solid"></i> <i class="ti-star"></i> <i class="ti-layout-line-solid"></i><br>
             <div class="content-text">
 
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa porro nesciunt iste dolore odit!
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa porro nesciunt iste dolore odit!
                     Delectus quas, optio cumque sequi, possimus obcaecati voluptatum dolor at doloremque veritatis harum
-                    ea placeat. Inventore!</span>
+                    ea placeat. Inventore!</p>
 
-                <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa porro nesciunt iste dolore odit!
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa porro nesciunt iste dolore odit!
                     Delectus quas, optio cumque sequi, possimus obcaecati voluptatum dolor at doloremque veritatis harum
-                    ea placeat. Inventore!</span>
+                    ea placeat. Inventore!</p>
             </div>
             <p class="load"><i class="ti-download"></i> Freedownload</p>
         </div>
